src/App.css
/* ... */
.skills-container {
  display: flex;
  flex-direction: column;
  gap: 5px;
}

.line-break {
  margin-bottom: 10px;
}

.section-two {
  gap: 80px;
}

.section-two-images {
  display: flex;
  flex-direction: row;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 100px;
}
.home-page-img-card {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  cursor: pointer;
  gap: 20px;
}

.home-page-img-card:hover .home-page-img-card-wrapper {
  transform: scale(1.1);
  box-shadow: 0 0 30px 0 rgba(0, 0, 0, 0.4);
}

.home-page-img-card-wrapper {
  transition: 0.4s ease-in-out;
  height: 350px;
}
.home-page-img-card-wrapper img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

.img-card-text {
  background-color: var(--main-color);
  color: white;
  padding: 10px 20px;
  border-radius: 30px;
}

.fullscreen-img-wrapper {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%);
  width: 570px;
  box-shadow: 0 0 50px -5px rgba(0, 0, 0, 0.4);
}

.fullscreen-img-wrapper img {
  width: 100%;
  height: 100%;
  object-fit: contain;
}

#close-fullscreen-img-btn {
  position: absolute;
  top: 0;
  right: 0;
  border: none;
  outline: none;
  width: 40px;
  height: 40px;
  color: white;
  background-color: crimson;
  z-index: 99;
  cursor: pointer;
}
#close-fullscreen-img-btn:hover {
  box-shadow: 0 0 30px -2px crimson;
}

#builder-page {
  height: 90vh;
}

#main-content {
  display: grid;
  grid-template-columns: 1fr 4fr;
  height: 100%;
}

.nav-bar {
  padding: 40px 60px;
  display: flex;
  flex-direction: column;
  justify-content: flex-start;
  align-items: stretch;
  background-color: #f3f3f3;
  height: 100%;
  gap: 30px;
}

.nav-link {
  display: flex;
  justify-content: flex-start;
  align-items: center;
  gap: 10px;
  font-weight: 500;
  font-size: 1.2rem;
  color: var(--main-color);
  padding: 10px 20px;
  border-radius: 30px;
}

.nav-link:not(.active):hover {
  color: white;
  background-color: var(--hero-color);
}

.nav-link.active {
  color: white;
  background-color: var(--main-color);
}

.form-item {
  display: flex;
  flex-direction: column;
  justify-content: center;
  gap: 4px;
  /* align-items: flex-start; */
}

.inp {
  min-width: 300px;
  width: 100%;
  border: none;
  outline: none;
  background-color: rgb(238, 238, 238);
  padding: 10px 20px;
  border-radius: 30px;
}

.inp:focus {
  outline: 1px solid var(--main-color);
}

.form-item label[for="location"] + .inp {
  width: 43.5%;
}

.some-container {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
  gap: 30px;
  margin: 25px 0;
  width: 100%;
}

.wtf {
  width: 150px;
  display: flex;
  gap: 20px;
  margin: 10px;
}

.wtf input {
  margin-left: auto;
}

.theme-selection-form,
.font-selection-form {
  margin: 20px 0;
}

.education-container,
.experience-container,
.skills-setup-container {
  margin: 20px 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: stretch;
  gap: 30px;
  width: 60%;
}

.skills-setup-container {
  padding: 20px 0;
  flex-direction: row;
  flex-wrap: wrap;
  align-items: center;
  font-size: 1.1rem;
}

#add-responsibility-btn,
#add-skill-btn,
#confirm-add-skill-btn {
  font-size: 0.9rem;
  margin: 10px 0;
  background-color: black;
}

.education-item,
.experience-item,
.skill-item-setup {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-wrap: wrap;
  gap: 50px;
  padding: 20px 40px;
  border-radius: 30px;
  background-color: rgb(231, 231, 231);
}
.education-item-btns-container,
.experience-item-btns-container,
.skill-item-btns-container {
  margin-left: auto;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 10px;
}
.edit-education-btn,
.edit-experience-btn,
.delete-education-btn,
.delete-experience-btn {
  font-size: 1.3rem;
}

.add-new-education-item-btn,
.add-new-experience-item-btn {
  padding: 15px 40px;
  border-radius: 30px;
  background-color: black;
  color: white;
  font-size: 1.3rem;
  font-weight: 700;
}

.new-education-item-form {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  gap: 20px;
}

.special-btn {
  font-weight: 700;
  font-size: 1.2rem;
  padding: 10px 40px;
  border-radius: 30px;
  color: white;
}
.some-btns-container {
  display: flex;
  justify-content: stretch;
  gap: 40px;
}

#add-new-edu-btn,
#confirm-add-experience-btn {
  flex-grow: 1;
  background-color: var(--main-color);
}
#cancel-new-edu-btn,
#cancel-add-experience-btn,
#cancel-add-skill-btn {
  flex-grow: 1;
  background-color: crimson;
}

.section-three {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 0;
  margin: 0;
}

.footer {
  display: flex;
  justify-content: center;
  align-items: center;
  padding: 100px 60px;
  gap: 100px;
  background-color: var(--main-color);
}

.footer .logo {
  font-size: 4rem;
  font-weight: 900;
  color: white;
  font-family: "Playfair Display", serif;
}
.footer-links {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  gap: 10px;
}
.footer-link {
  display: flex;
  justify-content: center;
  align-items: center;
  font-size: 1.3rem;
  color: white;
  gap: 10px;
}

.about-section {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  padding: 100px;
  text-align: center;
  gap: 30px;
  height: 80vh;
}

.about-section .description {
  padding: 0 150px;
}

.builder-section {
  display: flex;
  flex-direction: column;
  justify-content: stretch;
  align-items: center;
  padding: 40px;
}
#save-and-return-edu {
  background-color: green;
}
.center-this-shit {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-items: center;
}

.some-container {
  justify-content: center;
}

.builder-section {
  transform: translateX(-200px);
  opacity: 0;
  animation: builder-section-anim 0.5s ease-in-out forwards;
}
/* ... */

